<resources>
    <string name="app_name">Aplikacja</string>
    <string name="action_settings">Settings</string>
    <string name="imie">Imie</string>
    <string name="title">Aplikacja</string>
    <string name="label">Wpisz swoje imie: </string>
    <string name="save">Zapisz</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="action_save">Save</string>
    <string name="listaNotatek">Notatki</string>
    <string name="title_activity_notatki">NotatkiActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_countdown">CountdownActivity</string>
    <string name="countdown">Odliczanie</string>
    <string name="startCountdown">Rozpocznij odliczanie</string>
    <string name="notifyHint">tytuł powiadomienia</string>
    <string name="notifyBdy">zawartość powiadomienia</string>
    <string name="countdownValue">czas w sekundach</string>
    <string name="name">channel</string>
    <string name="channel_description">channelDescription</string>
    <string name="dialogFileNameHint">podaj nazwe pliku</string>
    <string name="fileNameBtnString">Zapisz</string>
    <string name="title_activity_list_of_note">ListOfNoteActivity</string>
    <string name="title_activity_note_show_content">NoteShowContent</string>
    <string name="title_activity_prime_number">PrimeNumberActivity</string>
    <string name="start">Start</string>
    <string name="primeNumberString">Prime Number</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="LevelActivityString">Sensor</string>
    <string name="title_activity_draw">DrawActivity</string>
    <string name="drawBtnString">Rysuj</string>
    <string name="cleanScreenBtnString">Wyczyść ekran</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="takePhotoBtnString">Zrób zdjęcie</string>
    <string name="openGalleryBtnString">Galeria</string>
    <string name="takePhotoString">Zrób zdjęcie</string>
    <string name="testBtnString">Test Activity</string>
    <string name="bluetoothBtnString">Bluetooth</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="bluetoothActivityBtnString">Bluetooth ON/OFF</string>
    <string name="discoverabilityString">Enable discoverability</string>
    <string name="title_activity_btdevice_list">BTDeviceListActivity</string>
    <string name="discoverDevicesString">Discover Devices</string>
    <string name="title_activity_bluetooth_chat">BluetoothChatActivity</string>
    <string name="bluetoothChatString">Bluetooth Chat</string>
</resources>
