<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BluetoothActivity"
    tools:showIn="@layout/activity_bluetooth">

    <Button
        android:id="@+id/BTonOfBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/bluetoothActivityBtnString"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/discoverabilityBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/BTonOfBtn"
        android:onClick="enableDiscoverability"
        android:text="@string/discoverabilityString"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/discoverDevicesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/discoverabilityBtn"
        android:onClick="discoverDevicesClick"
        android:text="@string/discoverDevicesString"
        android:layout_alignParentLeft="true" />

    <ListView
        android:id="@+id/listViewBT"
        android:layout_width="wrap_content"
        android:layout_height="355dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>